--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -3,5 +3,8 @@
         <tr>
             <td><%= allTodos[i].title %></td>
         </tr>
+        <tr>
+            <td><%= allTodos[i].dueDate %></td>
+        </tr>
         <%}%>
 </table>
