--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo List</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="./css/styles.css" rel="stylesheet">
 </head>
+
 <body>
-    <%-  include('header.ejs')%>
-    <%- include('todos.ejs')%>
-    <%- include('footer.ejs')%>
+    <div class="grid grid-cols-6">
+        <div class="col-start-3 col-span-2">
+            <%- include('header.ejs') %>
+
+                <form action="/add-todo" method="POST">
+                    <div class="flex gap-2 py-4">
+                        <div class="flex-auto">
+                            <input type="text" name="title" placeholder="What's next?"
+                                class="border border-gray-300 text-gray-900 w-full rounded p-2 text-sm" required>
+                        </div>
+                        <div class="flex-auto">
+                            <input type="date" name="dueDate"
+                                class="border border-gray-300 text-gray-900 w-full rounded p-2 text-sm leading-4">
+                        </div>
+                        <div class="flex-none">
+                            <input type="submit" value="Add"
+                                class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2">
+                        </div>
+                    </div>
+                </form>
+                <%- include('todos.ejs')%>
+                <%- include('footer.ejs')%>
+        </div>
+    </div>
 </body>
+
 </html>
