--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -1,8 +1,84 @@
-<table>
-    <% for( var i=0; i< allTodos.length ; i++) { %>
-        <tr>
-            <td><%= allTodos[i].title %></td>
-            <td><%= allTodos[i].dueDate %></td>
-        </tr>
-        <%}%>
-</table>
+<!-- Overdue Todos -->
+<div>
+    <h5 class="text-red-600">Overdue <span id="count-overdue" class="bg-gray-100 py-1 px-3"><%= allTodos.filter(todo=> new Date(todo.dueDate) < new
+                Date().setHours(0, 0, 0, 0)).length %></stan></h5>
+    <ul class="list-none">
+        <% allTodos.forEach(function(todo) { if (new Date(todo.dueDate) < new Date().setHours(0, 0, 0,
+            0)) { %>
+            <li class="group">
+                <div class="flex w-fit my-2 px-2 py-1 items-center">
+                    <input id="todo-checkbox-<%= todo.id %>" type="checkbox"
+                        class="w-4 h-4 text-blue-600 bg-gray-100 rounded border">
+                    <label for="todo-checkbox-<%= todo.id %>"
+                        class="ml-2 text-sm text-gray-600 cursor-pointer">
+                        <%= todo.title %>
+                    </label>
+                    <a href="/todos/<%= todo.id %>" class="ml-2 hidden group-hover:block">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="currentColor" class="size-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                        </svg>
+
+                    </a>
+                </div>
+            </li>
+            <% } }) %>
+    </ul>
+</div>
+ <!-- Due Today Todos -->
+ <div>
+    <h5 class="text-green-600">Due Today <span id="count-due-today" class="bg-gray-100 py-1 px-3"><%= allTodos.filter(todo=> todo.dueDate === new
+            Date().toISOString().slice(0, 10)).length %></span></h5>
+    <ul class="list-none">
+        <% allTodos.forEach(function(todo) { if (todo.dueDate===new Date().toISOString().slice(0, 10)) {
+            %>
+            <li class="group">
+                <div class="flex w-fit my-2 px-2 py-1 items-center">
+                    <input id="todo-checkbox-<%= todo.id %>" type="checkbox"
+                        class="w-4 h-4 text-blue-600 bg-gray-100 rounded border">
+                    <label for="todo-checkbox-<%= todo.id %>"
+                        class="ml-2 text-sm text-gray-600 cursor-pointer">
+                        <%= todo.title %>
+                    </label>
+                    <a href="/todos/<%= todo.id %>" class="ml-2 hidden group-hover:block">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="currentColor" class="size-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                        </svg>
+
+                    </a>
+                </div>
+            </li>
+            <% } }) %>
+    </ul>
+</div>
+<!-- Due Later Todos -->
+<div>
+    <h5 class="text-yellow-600">Due Later <span id="count-due-later" class="bg-gray-100 py-1 px-3"><%= allTodos.filter(todo=> new Date(todo.dueDate) > new
+            Date()).length %></span></h5>
+    <ul class="list-none">
+        <% allTodos.forEach(function(todo) { if (new Date(todo.dueDate)> new Date()) { %>
+            <li class="group">
+                <div class="flex w-fit my-2 px-2 py-1 items-center">
+                    <input id="todo-checkbox-<%= todo.id %>" type="checkbox"
+                        class="w-4 h-4 text-blue-600 bg-gray-100 rounded border">
+                    <label for="todo-checkbox-<%= todo.id %>"
+                        class="ml-2 text-sm text-gray-600 cursor-pointer">
+                        <%= todo.title %>
+                    </label>
+                    <a href="/todos/<%= todo.id %>" class="ml-2 hidden group-hover:block">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="currentColor" class="size-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                        </svg>
+
+                    </a>
+                </div>
+            </li>
+            <% } }) %>
+    </ul>
+</div>
+
