--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -25,8 +25,8 @@
                                 class="border border-gray-300 text-gray-900 w-full rounded p-2 text-sm leading-4">
                         </div>
                         <div class="flex-none">
-                            <input type="submit" value="Add"
-                                class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2">
+                            <button type="submit"
+                                class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2">Add</button>
                         </div>
                     </div>
                 </form>
