--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -10,13 +10,13 @@
             0)) { %>
             <li class="group">
                 <div class="flex w-fit my-2 px-2 py-1 items-center">
-                    <input id="todo-checkbox-<%= todo.id %>" type="checkbox"
+                    <input id="todo-checkbox-<%= todo.id %>" type="checkbox" <%=todo.completed?"checked":""%> onclick="updateTodo(<%= todo.id%>)"
                         class="w-4 h-4 text-blue-600 bg-gray-100 rounded border">
                     <label for="todo-checkbox-<%= todo.id %>"
                         class="ml-2 text-sm text-gray-600 cursor-pointer">
                         <%= todo.title %>
                     </label>
-                    <a href="/todos/<%= todo.id %>" class="ml-2 hidden group-hover:block">
+                    <a href="#" class="ml-2 hidden group-hover:block" onclick="deleteTodo(<%= todo.id%>)">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke-width="1.5" stroke="currentColor" class="size-4">
                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -41,13 +41,13 @@
             %>
             <li class="group">
                 <div class="flex w-fit my-2 px-2 py-1 items-center">
-                    <input id="todo-checkbox-<%= todo.id %>" type="checkbox"
+                    <input id="todo-checkbox-<%= todo.id %>" type="checkbox" <%=todo.completed?"checked":""%> onclick="updateTodo(<%= todo.id%>)"
                         class="w-4 h-4 text-blue-600 bg-gray-100 rounded border">
                     <label for="todo-checkbox-<%= todo.id %>"
                         class="ml-2 text-sm text-gray-600 cursor-pointer">
                         <%= todo.title %>
                     </label>
-                    <a href="/todos/<%= todo.id %>" class="ml-2 hidden group-hover:block">
+                    <a href="#" class="ml-2 hidden group-hover:block" onclick="deleteTodo(<%= todo.id%>)">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke-width="1.5" stroke="currentColor" class="size-4">
                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -71,13 +71,13 @@
         <% allTodos.forEach(function(todo) { if (new Date(todo.dueDate)> new Date()) { %>
             <li class="group">
                 <div class="flex w-fit my-2 px-2 py-1 items-center">
-                    <input id="todo-checkbox-<%= todo.id %>" type="checkbox"
+                    <input id="todo-checkbox-<%= todo.id %>" type="checkbox" <%=todo.completed?"checked":""%> onclick="updateTodo(<%= todo.id%>)"
                         class="w-4 h-4 text-blue-600 bg-gray-100 rounded border">
                     <label for="todo-checkbox-<%= todo.id %>"
                         class="ml-2 text-sm text-gray-600 cursor-pointer">
                         <%= todo.title %>
                     </label>
-                    <a href="/todos/<%= todo.id %>" class="ml-2 hidden group-hover:block">
+                    <a href="#" class="ml-2 hidden group-hover:block" onclick="deleteTodo(<%= todo.id%>)">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke-width="1.5" stroke="currentColor" class="size-4">
                             <path stroke-linecap="round" stroke-linejoin="round"
