--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -46,32 +46,10 @@
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
-
+            <p class="py-2">Welcome to the To-Do manager</p>
+            <p class="py-2">New here? <a href="/signup" class="text-green-600">Sign-up now</a></p>
+            <p class="py-2">Already have an account?<a href="/login" class="text-green-600">Sign-in</a></p>
             <!-- Form for adding a new to-do -->
-            <form action="/todos" method="POST">
-                <div class="flex gap-2 py-4">
-                    <div class="flex-auto">
-                        <input type="text" name="title" placeholder="What's next?"
-                            class="border border-gray-300 text-gray-900 w-full rounded p-2 text-sm" required>
-                    </div>
-                    <div class="flex-auto">
-                        <input type="date" name="dueDate"
-                            class="border border-gray-300 text-gray-900 w-full rounded p-2 text-sm leading-4" required>
-                    </div>
-                    <div class="flex-none">
-                        <button type="submit"
-                            class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2">Add</button>
-                    </div>
-                </div>
-            </form>
-            <div class="flex py-4">
-                <h5 class="text-blue-600">Completed</h5>
-                <div id="count-completed" class="bg-gray-100 py-1 px-3 ml-2">
-                    <%= allTodos.filter(todo => todo.completed).length %>
-                </div>
-            </div>
-
-            <%- include('todos.ejs') %> <!-- Render todos here -->
             <%- include('footer.ejs') %> <!-- Render footer here -->
         </div>
     </div>
